--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     </audio>
     
     <audio id="background-music" loop preload="auto">
+        <source src="music/pokemon-theme.ogg" type="audio/ogg">
         <source src="music/pokemon-theme.mp3" type="audio/mpeg">
+        <source src="https://assets.mixkit.co/music/preview/mixkit-game-level-music-689.mp3" type="audio/mpeg">
     </audio>
     
     <script src="app.js"></script>
